--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "concurrently": "^4.1.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "mongoose": "^5.5.8"
+    "mongoose": "^5.5.8",
+    "nodemon": "^1.19.0"
   },
   "devDependencies": {}
 }
